--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 body {
   line-height: 1.5;
-  display: flex;
+  display: block;
   justify-content: center;
   position: relative;
 }
 
 main {
   /* border: 1px solid black; */
+  /* display: block; */
   height: 75%;
   width: 30%;
   padding: 20px;
@@ -22,11 +23,11 @@ main > #pokemon-card {
 
 .card-wrapper {
   background-color: rgb(230, 66, 66);
-  border: 10px solid gold;
-  border-radius: 10px;
+  border: 11px ridge rgba(255, 217, 0, 0.877);
+  border-radius: 5px;
   height: 90%;
   min-height: 550px;
-  box-shadow: 4px 4px 3px 1px black;
+  box-shadow: 1px 2px 10px gray;
 }
 
 /* Name, HP, type */
@@ -38,11 +39,14 @@ main > #pokemon-card {
   flex-wrap: nowrap;
 }
 
+/* .top-text {
+  position: absolute;
+} */
+
 #pokemon-name {
   font-weight: 700;
-  position: relative;
-  left: 0;
 }
+
 #top-text-wrapper span:not(:first-child) {
   margin: 0;
   margin-left: 110px;
@@ -60,9 +64,9 @@ main > #pokemon-card {
   width: 75%;
   min-height: 150px;
   margin: auto;
-  margin-bottom: 30px;
-  border: 5px solid gold;
-  border-radius: 10px;
+  margin-bottom: 0;
+  border: 4px ridge gold;
+  border-radius: 5px;
 }
 
 .sprites {
@@ -74,16 +78,19 @@ main > #pokemon-card {
 
 /* Stats */
 #stats-wrapper {
-  justify-content: space-between;
   text-align: center;
-  margin-bottom: 20px;
+  margin-top: 0;
+  padding-top: 3px;
+  margin-bottom: 80px;
 }
+
 /* Abilities */
 .ability-wrapper {
   justify-content: space-between;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 75px;
 }
+
 /* Actions */
 #actions-section {
   display: flex;
